[Bug #21629] Initialize `struct RString` with const member